--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       :root {
         font-family: 'Segoe UI', sans-serif;
         color: #e8eef2;
-        background: radial-gradient(circle at 20% 20%, #1b2330, #0d1117 60%);
+        background: radial-gradient(circle at 20% 20%, #1b1533, #0a0718 60%);
       }
       body {
         margin: 0;
