--- a/index.html
+++ b/index.html
@@ -97,6 +97,15 @@
           <button data-speed="5">5x</button>
         </div>
         <div class="row">
+          <label style="width: 100%">
+            Color Palette
+            <select id="palette" style="width: 100%; margin-top: 4px">
+              <option value="0">3D (purple/blue)</option>
+              <option value="1">2D (blue→green→yellow→white)</option>
+            </select>
+          </label>
+        </div>
+        <div class="row">
           <label>Yaw <span id="yawLabel" class="value"></span></label>
           <input id="yaw" type="range" min="-180" max="180" step="1" value="0" />
         </div>
