--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
             <select id="palette" style="width: 100%; margin-top: 4px">
               <option value="0">3D (purple/blue)</option>
               <option value="1">2D (blue→green→yellow→white)</option>
+              <option value="2">Structure (high contrast)</option>
             </select>
           </label>
         </div>
