--- a/wigle-u-2d/index.html
+++ b/wigle-u-2d/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
@@ -422,10 +422,22 @@
     </div>
 
     <div id="controls">
-      <div class="toggle-button" id="toggleControls">☰</div>
+      <div
+        class="toggle-button"
+        id="toggleControls"
+        style="width: 12px; height: 12px"
+      >
+        ☰
+      </div>
 
-      <div class="controls-header">
-        <h2>⚡ Energy Life</h2>
+      <div class="controls-header" style="padding-top: 23px">
+        <h1 style="margin: 0 0 12px; display: flex; align-items: center">
+          <img
+            src="../assets/logo.png"
+            alt="wigle-u-3d"
+            style="max-width: 96px; height: auto; padding-right: 7px"
+          />
+        </h1>
         <div class="preset-buttons">
           <button class="preset-btn" id="savePreset">Save</button>
           <button class="preset-btn" id="loadPreset">Load</button>
