--- a/wigle-u-2d/index.html
+++ b/wigle-u-2d/index.html
@@ -140,6 +140,12 @@
         background: rgba(0, 255, 204, 0.3);
       }
 
+      /* Version toggle button hover effect */
+      .preset-buttons button[onclick]:hover {
+        background: linear-gradient(135deg, rgba(0, 255, 204, 0.4), rgba(0, 150, 255, 0.4)) !important;
+        box-shadow: 0 0 12px rgba(0, 255, 204, 0.4);
+      }
+
       .control-group {
         padding: 15px;
         border-bottom: 1px solid rgba(255, 255, 255, 0.05);
@@ -443,6 +449,13 @@
           <button class="preset-btn" id="loadPreset">Load</button>
           <button class="preset-btn" id="saveParamsFile">Save JSON</button>
           <button class="preset-btn" id="loadParamsFile">Load JSON</button>
+        </div>
+        <div class="preset-buttons" style="margin-top: 15px;">
+          <button
+            onclick="window.location.href='../index.html'"
+            style="width: 100%; padding: 12px; background: linear-gradient(135deg, rgba(0, 255, 204, 0.2), rgba(0, 150, 255, 0.2)); border: 1px solid rgba(0, 255, 204, 0.5); border-radius: 5px; color: #00ffcc; cursor: pointer; font-size: 14px; font-weight: 500; transition: all 0.2s ease;">
+            ⇄ Switch to 3D Version
+          </button>
         </div>
       </div>
 
